GNU dbm NEWS -- history of user-visible changes. 2022-02-04
Copyright (C) 1990-2022 Free Software Foundation, Inc.
See the end of file for copying conditions.

Please send gdbm bug reports to <bug-gdbm@gnu.org>.

Version 1.23, 2022-02-04

* Bucket cache switched from balanced tree to hash table

Change suggested by Terence Kelly.

* Speed up flushing the changed buckets on disk

* New option codes for gdbm_setopt

** GDBM_GETDBFORMAT

Return the database format.

** GDBM_GETDIRDEPTH

Return the directory depth, i.e. the number of initial (most significant)
bits in hash value that are interpreted as index to the directory.

** GDBM_GETBUCKETSIZE

Return maximum number of keys per bucket.

** GDBM_GETCACHEAUTO

Return the status of the automatic cache adjustment.

** GDBM_SETCACHEAUTO

Enable or disable automatic cache adjustment.

Version 1.22, 2021-10-19

* Fix file header validation

* Fix key verification in sequential access

* Fix testing with DejaGNU 1.6.3

* Fix stack overflow in print_usage

* Fix a leak of avail entry on pushing a new avail block

The leak would occur if the original avail table had odd number of entries.

* New gdbmtool variables: errorexit, errormask, trace, timing

"Errorexit" and "errormask" control which GDBM errors would cause the
program termination and emitting a diagnostic message,
correspondingly.  Both variables are comma-delimited lists of error
codes.

The "trace" variable enables tracing of the gdbmtool commands.

The "timing" variable, when set, instructs gdbmtool to print time
spent in each command it runs.

* New gdbmtool options: -t (--trace), and -T (--timing)


Version 1.21, 2021-09-02

* Crash tolerance

By default it is possible for an abrupt crash (e.g., power failure,
OS kernel panic, or application process crash) to corrupt the gdbm
database file.  A new Linux-only mechanism enables applications to
recover the database state corresponding to the most recent