@@ -1,8 +1,19 @@
-GNU dbm NEWS -- history of user-visible changes. 2022-02-04
+GNU dbm NEWS -- history of user-visible changes. 2022-07-01
 Copyright (C) 1990-2022 Free Software Foundation, Inc.
 See the end of file for copying conditions.
 
 Please send gdbm bug reports to <bug-gdbm@gnu.org>.
+
+
+* New gdbm_load option: --update
+
+The --update (-U) option instructs gdbm_load to update an existing
+database, whose name is supplied by the second argument.
+
+* Fix semantics of gdbm_load -r
+
+The --replace (-r) is valid only when used together with --update.
+
 
 Version 1.23, 2022-02-04
 
